[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Necromancer_creativekind-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/necromancer.gd" type="Script" id=2]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("NecromancerCreativekind-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=1]
resource_name = "alert"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("NecromancerCreativekind-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 18, -0.25, 0, 0.25, 0, 19, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, 21, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 23, -0.25, 0, 0.25, 0, 24, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.55
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("NecromancerCreativekind-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 35, -0.25, 0, 0.25, 0, 36, -0.25, 0, 0.25, 0, 37, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0, 39, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0, 41, -0.25, 0, 0.25, 0, 42, -0.25, 0, 0.25, 0, 43, -0.25, 0, 0.25, 0, 44, -0.25, 0, 0.25, 0, 45, -0.25, 0, 0.25, 0, 46, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 )
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("NecromancerCreativekind-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 103, -0.25, 0, 0.25, 0, 104, -0.25, 0, 0.25, 0, 105, -0.25, 0, 0.25, 0, 106, -0.25, 0, 0.25, 0, 107, -0.25, 0, 0.25, 0, 108, -0.25, 0, 0.25, 0, 109, -0.25, 0, 0.25, 0, 110, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 )
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("NecromancerCreativekind-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}

[sub_resource type="CapsuleShape2D" id=7]

[sub_resource type="CapsuleShape2D" id=68]
radius = 14.0

[sub_resource type="StyleBoxFlat" id=66]
bg_color = Color( 0.0862745, 0.0823529, 0.0823529, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=67]
bg_color = Color( 0.984314, 0.254902, 0.0627451, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=69]
ProgressBar/styles/bg = SubResource( 66 )
ProgressBar/styles/fg = SubResource( 67 )

[node name="necromancer" type="Area2D"]
collision_layer = 2
collision_mask = 23
script = ExtResource( 2 )

[node name="NecromancerCreativekind-Sheet" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -1, -22 )
hframes = 17
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/alert = SubResource( 1 )
anims/attack = SubResource( 2 )
anims/death = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 68 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = -14.0
margin_top = -26.0
margin_right = 48.0
margin_bottom = -12.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 69 )
max_value = 200.0
percent_visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
